src/test/ui/regions/regions-infer-contravariance-due-to-decl.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-infer-contravariance-due-to-decl.rs:25:35
   |
LL | fn use_<'short,'long>(c: Contravariant<'short>,
   |                          --------------------- these two types are declared with different lifetimes...
LL |                       s: &'short isize,
LL |                       l: &'long isize,
   |                          ------------
...
LL |     let _: Contravariant<'long> = c;
   |                                   ^ ...but data from `c` flows into `l` here

error: aborting due to previous error

